# fusiontrack

./: .gitignore  README.md  index.html  requirements.txt
.github/workflows/: ci.yml
cpp/: CMakeLists.txt  README.md
cpp/bindings/: pymodule.cpp
cpp/include/fusiontrack/: ekf.hpp  linalg.hpp
cpp/src/: ekf.cpp
cpp/tests/: crossvalidate.py  test_ekf.cpp
docs/: ekf_explainer.md
notebooks/: 01_fusion_demo.ipynb  02_mot_demo.ipynb
src/: __init__.py  camera_sim.py  cpp_backend.py  ekf.py  fusion.py  mot.py  mot_sim.py  radar_sim.py  utils.py
tests/: conftest.py  test_ekf.py  test_mot.py
